// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`network 1`] = `
<form
  class="form-horizontal"
>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Name
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        name="name"
        placeholder="Enter a name for the Network source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Search addresses
    </label>
    <div
      class="col-sm-9"
    >
      <textarea
        class="form-control"
        id="generatedid-"
        name="hostsMultiple"
        placeholder="Enter values separated by commas"
        rows="5"
      />
      <span
        class="help-block"
      >
        IP addresses, IP ranges, DNS host names, and wildcards are valid. Use CIDR or Ansible notation for ranges.
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Port
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        maxlength="5"
        name="port"
        placeholder="Default port is 22"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Credentials
    </label>
    <div
      class="col-sm-9"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-dropdownselect  dropdown disabled btn-group"
          name="credentials"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="form-control dropdown-toggle btn btn-default"
            disabled=""
            id="credentials"
            role="button"
            type="button"
          >
            <span>
              Add one or more credentials
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="credentials"
            class="dropdown-menu"
            role="menu"
          />
        </div>
        <span
          class="input-group-btn"
        >
          <button
            class="form-control btn btn-default"
            title="Add a credential"
            type="button"
          >
            <span
              class="sr-only"
            >
              Add
            </span>
            <span
              aria-hidden="true"
              class="fa fa-plus"
            />
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    />
    <div
      class="col-sm-9"
    >
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          name="optionParamiko"
          type="checkbox"
        />
        Connect using Paramiko instead of Open 
        <abbr
          title="Secure Shell"
        >
          SSH
        </abbr>
      </label>
    </div>
  </div>
</form>
`;

exports[`non-connected 1`] = `
<form
  class="form-horizontal"
>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Name
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        name="name"
        placeholder="Enter a name for the Network source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Search addresses
    </label>
    <div
      class="col-sm-9"
    >
      <textarea
        class="form-control"
        id="generatedid-"
        name="hostsMultiple"
        placeholder="Enter values separated by commas"
        rows="5"
      />
      <span
        class="help-block"
      >
        IP addresses, IP ranges, DNS host names, and wildcards are valid. Use CIDR or Ansible notation for ranges.
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Port
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        maxlength="5"
        name="port"
        placeholder="Default port is 22"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Credentials
    </label>
    <div
      class="col-sm-9"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-dropdownselect  dropdown disabled btn-group"
          name="credentials"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="form-control dropdown-toggle btn btn-default"
            disabled=""
            id="credentials"
            role="button"
            type="button"
          >
            <span>
              Add one or more credentials
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="credentials"
            class="dropdown-menu"
            role="menu"
          />
        </div>
        <span
          class="input-group-btn"
        >
          <button
            class="form-control btn btn-default"
            title="Add a credential"
            type="button"
          >
            <span
              class="sr-only"
            >
              Add
            </span>
            <span
              aria-hidden="true"
              class="fa fa-plus"
            />
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    />
    <div
      class="col-sm-9"
    >
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          name="optionParamiko"
          type="checkbox"
        />
        Connect using Paramiko instead of Open 
        <abbr
          title="Secure Shell"
        >
          SSH
        </abbr>
      </label>
    </div>
  </div>
</form>
`;

exports[`step invalid 1`] = `
Object {
  "credentials": true,
  "hosts": true,
  "name": true,
  "port": true,
}
`;

exports[`step valid 1`] = `
Object {
  "credentials": false,
  "hosts": false,
  "name": false,
  "port": false,
}
`;

exports[`vcenter 1`] = `
<form
  class="form-horizontal"
>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Name
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        name="name"
        placeholder="Enter a name for the VCenter source"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      IP address or hostname
    </label>
    <div
      class="col-sm-9"
    >
      <input
        class="form-control"
        id="generatedid-"
        name="hostsSingle"
        placeholder="Enter an IP address or hostname (default port is 443)"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Credentials
    </label>
    <div
      class="col-sm-9"
    >
      <span
        class="input-group"
      >
        <div
          class="quipucords-dropdownselect  dropdown disabled btn-group"
          name="credentials"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="form-control dropdown-toggle btn btn-default"
            disabled=""
            id="credentials"
            role="button"
            type="button"
          >
            <span>
              Add a credential
            </span>
             
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="credentials"
            class="dropdown-menu"
            role="menu"
          />
        </div>
        <span
          class="input-group-btn"
        >
          <button
            class="form-control btn btn-default"
            title="Add a credential"
            type="button"
          >
            <span
              class="sr-only"
            >
              Add
            </span>
            <span
              aria-hidden="true"
              class="fa fa-plus"
            />
          </button>
        </span>
      </span>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    >
      Connection
    </label>
    <div
      class="col-sm-9"
    >
      <div
        class="quipucords-dropdownselect  dropdown btn-group"
        name="optionSslProtocol"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="form-control dropdown-toggle btn btn-default"
          id="optionSslProtocol"
          role="button"
          type="button"
        >
          <span>
            SSLv23
          </span>
           
          <span
            class="caret"
          />
        </button>
        <ul
          aria-labelledby="optionSslProtocol"
          class="dropdown-menu"
          role="menu"
        >
          <li
            class="active"
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              SSLv23
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              TLSv1
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              TLSv1.1
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              TLSv1.2
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              Disable SSL
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="col-sm-3 control-label"
      for="generatedid-"
    />
    <div
      class="col-sm-9"
    >
      <label
        class="checkbox-inline"
        title=""
      >
        <input
          name="optionSslCert"
          type="checkbox"
        />
        Verify SSL Certificate
      </label>
    </div>
  </div>
</form>
`;
